# advent-of-code

./: .gitignore  README.md
2015/lua/: README.MD  day01.lua  day02.lua  day03.lua  day04.lua  day05.lua
2015/zig/: build.zig
2015/zig/src/: day01.zig  day02.zig
2016/cc/: .gitignore  meson.build
2016/cc/include/: preprocessor.hpp  solution.hpp
2016/cc/src/: Advent.cpp  day01.cpp  day02.cpp  day03.cpp  solution.cpp
2017/cc/: CMakeLists.txt  aoc
2017/cc/include/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  day09.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day20.hpp  day21.hpp  day22.hpp  day23.hpp  day24.hpp  day25.hpp  solution.hpp  timer.hpp
2017/cc/src/: Advent.cpp  CMakeLists.txt
2017/rust/: .gitignore  Cargo.toml
2017/rust/benches/: tests.rs
2017/rust/src/: README.md  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  lib.rs  main.rs  util.rs  utils.rs
2018/rust/: Cargo.toml  NOTES.md  README.md  run_day.sh
2018/rust/benches/: aoc.rs
2018/rust/src/: README.md  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2019/rust/: .gitignore  Cargo.toml  NOTES.md  README.md
2019/rust/benches/: aoc.rs
2019/rust/src/: README.md  day01.rs  lib.rs  main.rs
2020/inputs/: day07.txt
2020/rust/: Cargo.toml  NOTES.md  README.md
2020/rust/benches/: aoc.rs
2020/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs  main.rs
2021/fortran/: advent.f90  makefile
2021/rust/: Cargo.toml  NOTES.md  README.md
2021/rust/benches/: aoc.rs
2021/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs  main.rs
2022/: NOTES.md
2022/fortran/: advent.f90  fpm.toml  makefile
2022/fortran/app/: day01.f90  day02.f90  day03.f90  day04.f90  day06.f90  day12.f90
2022/fortran/src/: aoc-2022-fortran.f90
2022/janet/: 01.janet  project.janet
2022/janet/src/: day01.janet  day02.janet  day03.janet  init.janet
2022/janet/test/: basic.janet
2022/jq/: 01.jq
2022/julia/: Project.toml
2022/julia/src/: AdventOfCode2022.jl  day01.jl  day02.jl  day03.jl  day04.jl  day05.jl
2022/julia/test/: runtests.jl
2022/lisp/: README.md  advent-of-code-2022.asd  day01.lisp  package.lisp  utils.lisp
2022/lisp/src/: day01.lisp
2022/lua/: 01.fnl  01.lua  day02.fnl  day03.fnl
2022/rust/: Cargo.toml  NOTES.md  README.md
2022/rust/benches/: aoc.rs
2022/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  lib.rs  main.rs  template.rs
2023/fortran/: aoc_2023_fortran.mod  fpm.toml
2023/fortran/app/: day01.f90
2023/fortran/src/: aoc-2023-fortran.f90
2023/julia/: Project.toml
2023/julia/src/: AdventOfCode2023.jl  day01.jl
2023/julia/test/: runtests.jl
