[package]
name = "advent2017-rs"
version = "0.1.0"
authors = ["Isaac Curtis <iicurtis@outlook.com>"]
edition = "2018"

[dependencies]
clap = "2"
itertools = "0.7"
num = "*"
petgraph = "*"
regex = "*"
nom = "*"
nom-trace = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "tests"
harness = false
