[package]
name = "advent2018"
version = "0.2.0"
authors = ["Isaac Curtis <iicurtis@outlook.com>"]
edition = "2018"

[dependencies]
clap = "2"
itertools = "0.9"
hashbrown = "0.8"
# simdeez = "0.5"
rayon = "1"
nom = "5"

[dev-dependencies]
criterion = "*"

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = 'aoc'
harness = false
