[package]
name = "advent2022"
version = "0.1.0"
authors = ["Isaac Curtis <iicurtis@outlook.com>"]
edition = "2021"

[dependencies]
clap = "4"
itertools = "0.10"
rayon = "1"
color-eyre = "0.6"
#hashbrown = "0.6"
# simdeez = "0.5"
#nom = "4"
#num = "0.4"

[dev-dependencies]
criterion = "*"

[[bench]]
name = 'aoc'
harness = false
